main/default/objects/Response__c/fields/Boolean_Response__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Response__c</fullName>
    <label>Boolean Response</label>
    <picklist>
        <picklistValues>
            <fullName>true</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>false</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>