main/default/objects/Response__c/fields/Learning_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Learning_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Assignment</label>
    <referenceTo>Learning_Assignment__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>