main/default/objects/Response__c/fields/Number_Response__c.field-meta.xml
<CustomField>
    <fullName>Number_Response__c</fullName>
    <label>Number Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>