main/default/objects/Response__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <formula>TEXT(Question__r.Type__c)</formula>
    <label>Question Type</label>
    <type>Text</type>
</CustomField>