main/default/objects/Response__c/fields/Response_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Text__c</fullName>
    <label>Response Text</label>
    <type>TextArea</type>
</CustomField>