main/default/objects/Response__c/fields/Response_Text_Long__c.field-meta.xml
<CustomField>
    <fullName>Response_Text_Long__c</fullName>
    <label>Response Text Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>